tests/baselines/reference/mismatchedClassConstructorVariable.errors.txt
tests/cases/compiler/mismatchedClassConstructorVariable.ts(2,7): error TS2300: Duplicate identifier 'baz'.


==== tests/cases/compiler/mismatchedClassConstructorVariable.ts (1 errors) ====
    var baz: foo;
    class baz { }
          ~~~
!!! error TS2300: Duplicate identifier 'baz'.
    class foo { }